--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8080
+spring.servlet.context-path=/flight-reservation
 
+# configure dbUrl, dbUsername, dbPassword, sql logs
+spring.datasource.url=jdbc:mysql://localhost:3306/RESERVATION
+spring.datasource.username=root
+spring.datasource.password=test123!
+spring.jpa.show-sql=true
