--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-server.port=8080
-spring.servlet.context-path=/flight-reservation
+server.port=8060
 
 # configure dbUrl, dbUsername, dbPassword, sql logs
-spring.datasource.url=jdbc:mysql://localhost:3306/RESERVATION
+spring.datasource.url=jdbc:mysql://localhost:3306/reservation
 spring.datasource.username=root
 spring.datasource.password=test123!
 spring.jpa.show-sql=true
+
+# configure the context path of the url
+server.servlet.context-path=/flight-reservation
+spring.thymeleaf.enabled=true
