fixed the date format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8060
 
 # configure dbUrl, dbUsername, dbPassword, sql logs
-spring.datasource.url=jdbc:mysql://localhost:3306/reservation
+spring.datasource.url=jdbc:mysql://localhost:3306/reservation?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=test123!
 spring.jpa.show-sql=true
@@ -9,3 +9,4 @@ spring.jpa.show-sql=true
 # configure the context path of the url
 server.servlet.context-path=/flight-reservation
 spring.thymeleaf.enabled=true
+
