--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,15 @@ spring.jpa.show-sql=true
 server.servlet.context-path=/flight-reservation
 spring.thymeleaf.enabled=true
 
+# CONFIGURE MAIL PROPERTIES
+# host on which the email should be sent
+spring.mail.host=smtp.gmail.com
+# port of the email
+spring.mail.port=587
+# username and password
+spring.mail.username=xpringboot
+spring.mail.password=tjljkyugjsqrkwzk
+# secured transport layer security
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
