--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.mail.password=tjljkyugjsqrkwzk
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
+
+# EXTERNALIZED CONFIGURATION
+com.rariom.flightreservation.flightreservation.itinerary.dirpath=/Users/mapletree/Desktop/ab2b/reservation_pdf/reservation
+com.rariom.flightreservation.flightreservation.itinerary.email.subject=Itinerary for your Flight
+com.rariom.flightreservation.flightreservation.itinerary.email.body=Hello, please find your itinerary attached.
