encode the user password using bcrypt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ spring.mail.properties.mail.smtp.auth=true
 # EXTERNALIZED CONFIGURATION
 com.rariom.flightreservation.flightreservation.itinerary.dirpath=/Users/mapletree/Desktop/ab2b/reservation_pdf/reservation
 com.rariom.flightreservation.flightreservation.itinerary.email.subject=Itinerary for your Flight
-com.rariom.flightreservation.flightreservation.itinerary.email.body=Hello, please find your itinerary attached.
+com.rariom.flightreservation.flightreservation.itinerary.email.body=Please find your itinerary attached.
